# LearnOpenGL

./: .gitmodules  CMakeLists.txt
src/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  lighting_shader.frag  main.cpp  shader.frag  shader.vert  white_shader.frag
